--- a/Source/StorageInfo.csproj
+++ b/Source/StorageInfo.csproj
@@ -69,6 +69,9 @@
     <None Include="Languages\English.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="Languages\German.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="mod.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
