--- a/StorageInfo/StorageInfo.csproj
+++ b/StorageInfo/StorageInfo.csproj
@@ -72,6 +72,9 @@
     <None Include="Languages\German.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="Languages\Russian.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="mod.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
