--- a/Below Zero/StorageInfo_BZ.csproj
+++ b/Below Zero/StorageInfo_BZ.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{0CDFE192-9672-425C-B635-6819C7389A95}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>StorageInfo_BZ</RootNamespace>
+    <RootNamespace>StorageInfo</RootNamespace>
     <AssemblyName>StorageInfo_BZ</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -17,7 +17,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>embedded</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>QMods\StorageInfo_BZ\</OutputPath>
+    <OutputPath>BepInEx\plugins\StorageInfo_BZ\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -28,7 +28,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>none</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>QMods\StorageInfo_BZ\</OutputPath>
+    <OutputPath>BepInEx\plugins\StorageInfo_BZ\</OutputPath>
     <DefineConstants>
     </DefineConstants>
     <ErrorReport>prompt</ErrorReport>
@@ -59,12 +59,8 @@
       <HintPath>D:\SubnauticaBelowZero\SubnauticaZero_Data\Managed\LitJson.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="QModInstaller">
-      <HintPath>..\..\..\..\SubnauticaBelowZero\BepInEx\plugins\QModManager\QModInstaller.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="SMLHelper">
-      <HintPath>..\..\..\..\SubnauticaBelowZero\QMods\SMLHelper_BZ\SMLHelper.dll</HintPath>
+    <Reference Include="Nautilus">
+      <HintPath>..\..\..\..\SubnauticaBelowZero\BepInEx\plugins\Nautilus\Nautilus.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
@@ -91,12 +87,34 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HarmonyPatches.cs" />
+    <Compile Include="..\Shared\HarmonyPatches.cs">
+      <Link>HarmonyPatches.cs</Link>
+    </Compile>
+    <Compile Include="..\Shared\Translation.cs">
+      <Link>Translation.cs</Link>
+    </Compile>
+    <Compile Include="ModPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Translation.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="mod.json">
+    <None Include="..\Shared\Languages\English.json">
+      <Link>Languages\English.json</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="..\Shared\Languages\French.json">
+      <Link>Languages\French.json</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="..\Shared\Languages\German.json">
+      <Link>Languages\German.json</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="..\Shared\Languages\Polish.json">
+      <Link>Languages\Polish.json</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="..\Shared\Languages\Russian.json">
+      <Link>Languages\Russian.json</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
@@ -106,10 +124,10 @@
 	<Target Name="BeforeBuild">
 	</Target> -->
   <PropertyGroup>
-    <PostBuildEvent>SET MODDIR=D:\SubnauticaBelowZero\QMods\
+    <PostBuildEvent>SET MODDIR=D:\SubnauticaBelowZero\BepInEx\
 SET ZIPFILE=D:\Downloads\$(ProjectName).zip
 
-xcopy "$(ProjectDir)QMods\*" "%25MODDIR%25" /i /e /r /y
+xcopy "$(ProjectDir)BepInEx\*" "%25MODDIR%25" /i /e /r /y
 
 7z a -mx9 "%25ZIPFILE%25" "$(ProjectDir)QMods"
 		</PostBuildEvent>
